CustomTeams/force-app/main/default/objects/Custom_Teams__c/Custom_Teams__c.object-meta.xml
<CustomObject>
    <label>Custom Teams</label>
    <nameField>
        <displayFormat>Teams-{000000}</displayFormat>
        <label>Custom Teams Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomTeams</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>