CustomTeams/force-app/main/default/objects/Custom_Teams__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <description>Defines the level of access the team member has to the related record</description>
    <inlineHelpText>Select the sharing permission level for this team member. &apos;Read&apos; gives view-only access, while &apos;Edit&apos; allows viewing and modifying the record.</inlineHelpText>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>