CustomTeams/force-app/main/default/objects/Custom_Teams__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether the team member is active and should be considered as team.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>