CustomTeams/force-app/main/default/objects/Custom_Teams__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Stores the API name of the related object.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>