CustomTeams/force-app/main/default/objects/Custom_Teams__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Stores ID of the record to which the custom team assignment is related.</description>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>