CustomTeams/force-app/main/default/objects/Custom_Teams__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the user who is added as part of the team.</description>
    <inlineHelpText>Select the user you want to add as a team member. Access will be granted automatically based on the selected Access Level.</inlineHelpText>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomTeams</relationshipName>
    <type>Lookup</type>
</CustomField>