CustomTeams/force-app/main/default/objects/Custom_Teams__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <description>Stores the functional role of the team member.</description>
    <inlineHelpText>Select the functional role assigned to this team member.</inlineHelpText>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Owner</fullName>
            </value>
            <value>
                <fullName>Supporter</fullName>
            </value>
            <value>
                <fullName>Executive/Coordinator</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Lead Qualifier</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>